add query param for entitlements

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -153,6 +153,12 @@ paths:
           required: true
           schema:
             type: string
+        - name: includeEntitlements
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: false
       responses:
         200:
           description: Project
