--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -171,7 +171,7 @@ components:
       properties:
         enabled:
           type: enum
-          description: If true, the integration will subscribe to create events.
+          description: If always, the integration will subscribe to create events.
           enum: [always]
 
     UpdateEvent:
@@ -179,7 +179,7 @@ components:
       properties:
         enabled:
           type: enum
-          description: If true, the integration will subscribe to update events.
+          description: If always, the integration will subscribe to update events.
           enum: [always]
         requiredWatchFields:
           type: array
@@ -195,7 +195,7 @@ components:
       properties:
         enabled:
           type: enum
-          description: If true, the integration will subscribe to delete events.
+          description: If always, the integration will subscribe to delete events.
           enum: [always]
 
     AssociationChangeEvent:
@@ -203,7 +203,7 @@ components:
       properties:
         enabled:
           type: enum
-          description: If true, the integration will subscribe to association change events.
+          description: If always, the integration will subscribe to association change events.
           enum: [always]
         includeFullRecords:
           type: boolean
