--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -150,11 +150,16 @@ components:
       required:
         - objectName
         - destination
+        - inheritFieldsAndMapping
       properties:
         objectName:
           type: string
         destination:
           type: string
+        inheritFieldsAndMapping:
+          type: boolean
+          description: If true, the integration will inherit the fields and mapping from the read object.
+          example: true
         createEvent:
           $ref: '#/components/schemas/CreateEvent'
         updateEvent:
