--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -155,6 +155,10 @@ components:
           type: string
         destination:
           type: string
+        inheritFieldsAndMapping:
+          type: boolean
+          description: If true, the integration will inherit the fields and mapping from the read object.
+          example: true
         createEvent:
           $ref: '#/components/schemas/CreateEvent'
         updateEvent:
