Add x-go-type-skip-optional-pointer: true to inheritFieldsAndMapping

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -157,6 +157,7 @@ components:
           type: string
         inheritFieldsAndMapping:
           type: boolean
+          x-go-type-skip-optional-pointer: true
           description: If true, the integration will inherit the fields and mapping from the read object.
           example: true
         createEvent:
