add optional error property to HydratedIntegrationObject

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -284,6 +284,11 @@ components:
         - destination
         - schedule
       properties:
+        error:
+          type: string
+          description: Error message if there was an issue hydrating this object.
+          example: "Failed to fetch fields from provider"
+          x-go-type-skip-optional-pointer: true
         objectName:
           type: string
         displayName:
