--- a/api/api.yaml
+++ b/api/api.yaml
@@ -30,7 +30,7 @@ paths:
                 projectId:
                   type: string
                   description: The Ampersand project ID.
-                  example: 453eac80-3482-47c5-b4d6-f040959499e3
+                  example: my-project
                 groupRef:
                   type: string
                   description: The ID that your app uses to identify the group of users for this Connection, this can be an Org ID, workspace ID, etc.
@@ -50,7 +50,7 @@ paths:
                 providerAppId:
                   type: string
                   description:
-                    ID of the provider app (e.g. Salesforce connected app), returned from a CreateProviderApp call.
+                    ID of the provider app, returned from a CreateProviderApp call.
                     If omitted, the default provider app that was set up on the Ampersand Dashboard is assumed.
                   example: 32356abe-d2fd-49c7-9030-abdcbc6456d4
                 provider:
@@ -405,7 +405,7 @@ paths:
         - name: providerAppId
           in: path
           required: true
-          description: ID of the provider app (e.g. Salesforce connected app), returned by the CreateProviderApp call.
+          description: ID of the provider app, returned by the CreateProviderApp call.
           schema:
             type: string
           example: 32356abe-d2fd-49c7-9030-abdcbc6456d4
@@ -439,7 +439,7 @@ paths:
         - name: providerAppId
           in: path
           required: true
-          description: ID of the provider app (e.g. Salesforce connected app), returned by the CreateProviderApp call.
+          description: ID of the provider app, returned by the CreateProviderApp call.
           schema:
             type: string
           example: 32356abe-d2fd-49c7-9030-abdcbc6456d4
@@ -574,7 +574,7 @@ paths:
                 name:
                   type: string
                   description: The integration name.
-                  example: Integration_A
+                  example: my-integration
                 provider:
                   type: string
                   description: The provider name (e.g. "salesforce", "hubspot")
@@ -630,10 +630,10 @@ paths:
         - name: integrationId
           in: path
           required: true
-          description: The unique identifier of the integration.
+          description: The integration ID.
           schema:
             type: string
-          example: integration-123
+          example: 123e4567-e89b-12d3-a456-426614174000
       responses:
         204:
           description: Deleted
@@ -722,7 +722,7 @@ paths:
         - name: integrationId
           in: path
           required: true
-          description: The unique identifier of the integration.
+          description: The integration ID.
           schema:
             type: string
           example: integration-123
@@ -783,22 +783,21 @@ paths:
         - name: integrationId
           in: path
           required: true
-          description: The unique identifier of the integration.
+          description: The integration ID.
           schema:
             type: string
-          example: integration-123
         - name: revisionId
           in: path
           required: true
+          description: The revision ID.
           schema:
             type: string
-            example: revision_123
         - name: connectionId
           in: query
           required: true
+          description: The connection ID.
           schema:
             type: string
-            example: 
       responses:
         200:
           description: Hydrated revision
@@ -884,10 +883,9 @@ paths:
         - name: integrationId
           in: path
           required: true
-          description: The unique identifier of the integration.
+          description: The integration ID.
           schema:
             type: string
-          example: integration-123
       requestBody:
         content:
           application/json:
@@ -968,17 +966,16 @@ paths:
         - name: integrationId
           in: path
           required: true
-          description: The unique identifier of the integration.
+          description: The integration ID.
           schema:
             type: string
           example: integration-123
         - name: installationId
           in: path
           required: true
-          description: The Ampersand installation ID.
+          description: The installation ID.
           schema:
             type: string
-          example: installation-123
       responses:
         200:
           description: The installation
@@ -1013,7 +1010,7 @@ paths:
         - name: integrationId
           in: path
           required: true
-          description: The unique identifier of the integration.
+          description: The integration ID.
           schema:
             type: string
           example: integration-123
@@ -1048,7 +1045,7 @@ paths:
         - name: integrationId
           in: path
           required: true
-          description: The unique identifier of the integration.
+          description: The integration ID.
           schema:
             type: string
           example: integration-123
@@ -1151,7 +1148,7 @@ paths:
         - name: integrationId
           in: path
           required: true
-          description: The unique identifier of the integration.
+          description: The integration ID.
           schema:
             type: string
           example: integration-123
@@ -1246,7 +1243,7 @@ paths:
         - name: integrationId
           in: path
           required: true
-          description: The unique identifier of the integration.
+          description: The integration ID.
           schema:
             type: string
           example: integration-123
@@ -3189,7 +3186,7 @@ components:
       properties:
         providerAppId:
           description:
-            ID of the provider app (e.g. Salesforce connected app), returned from a CreateProviderApp call.
+            ID of the provider app, returned from a CreateProviderApp call.
             If omitted, the default provider app that was set up on the Ampersand Dashboard is assumed.
           type: string
           example: 32356abe-d2fd-49c7-9030-abdcbc6456d4
