--- a/api/api.yaml
+++ b/api/api.yaml
@@ -25,7 +25,7 @@ paths:
               properties:
                 providerWorkspaceRef:
                   type: string
-                  description: The identifier for the provider workspace.
+                  description: The identifier for the provider workspace (e.g. the Salesforce subdomain).
                   example: salesforce-instance-domain
                 projectId:
                   type: string
@@ -1312,7 +1312,6 @@ paths:
           description: Operation ID.
           schema:
             type: string
-          example: operation-123
       responses:
         200:
           description: Operation
@@ -1357,7 +1356,6 @@ paths:
           description: Operation ID.
           schema:
             type: string
-          example: operation-123
       responses:
         200:
           description: List of logs
@@ -1412,8 +1410,8 @@ paths:
         - name: provider
           in: path
           required: true
-          description: The unique identifier of the provider.
-          example: salesforce
+          description: The API provider.
+          example: hubspot
           schema:
             type: string
       responses:
@@ -1526,7 +1524,6 @@ paths:
           in: path
           required: true
           description: API key to access Ampersand APIs. 
-          example: ak_5f9d3e8c7b2a1
           schema:
             type: string
       responses:
@@ -1565,7 +1562,6 @@ paths:
           in: path
           required: true
           description: API key to access Ampersand APIs. 
-          example: ak_5f9d3e8c7b2a1
           schema:
             type: string
       responses:
@@ -1594,7 +1590,6 @@ paths:
           in: path
           required: true
           description: API key to access Ampersand APIs. 
-          example: ak_5f9d3e8c7b2a1
           schema:
             type: string
       requestBody:
@@ -3040,7 +3035,7 @@ components:
           $ref: "#/components/schemas/Consumer"
         providerWorkspaceRef:
           type: string
-          description: If available, the identifier for the provider workspace (e.g. "salesforce-instance-domain")
+          description: If available, the identifier for the provider workspace (e.g. the Salesforce subdomain)
           example: provider-workspace-123
         providerConsumerRef:
           type: string
@@ -3125,7 +3120,7 @@ components:
             type: string
           description: The scopes for the tokens.
     Oauth2AuthorizationCode:
-      title: OAuth2 Authorization Code 
+      title: OAuth2 Authorization Code
       type: object
       properties:
         accessToken:
@@ -3305,7 +3300,6 @@ components:
         id:
           type: string
           description: The operation ID.
-          example: operation-123
         installationId:
           type: string
           description: The Ampersand installation ID.
